[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Comic_Andy.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/UI & misc/ingame_menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 90
font_data = ExtResource( 1 )

[node name="Menu " type="Container"]
margin_left = 28.0
margin_top = 116.0
margin_right = 1210.0
margin_bottom = 715.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 444.987
margin_top = -91.0156
margin_right = 759.457
margin_bottom = 576.984
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
margin_right = 325.0
margin_bottom = 667.0
scroll_horizontal_enabled = false
scroll_vertical = 1

[node name="HSeparator" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
margin_top = -1.0
margin_right = 313.0
margin_bottom = 779.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="comics" type="Button" parent="MarginContainer/ScrollContainer/HSeparator"]
margin_right = 313.0
margin_bottom = 108.0
focus_next = NodePath("../music on & off")
focus_previous = NodePath("../chap 2 ")
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "comics"
flat = true

[node name="new game" type="Button" parent="MarginContainer/ScrollContainer/HSeparator"]
margin_top = 112.0
margin_right = 313.0
margin_bottom = 220.0
focus_next = NodePath("../music on & off")
focus_previous = NodePath("../chap 2 ")
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "new game"
flat = true

[node name="continue" type="Button" parent="MarginContainer/ScrollContainer/HSeparator"]
margin_top = 224.0
margin_right = 313.0
margin_bottom = 332.0
focus_next = NodePath("../music on & off")
focus_previous = NodePath("../chap 2 ")
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "continue"
flat = true

[node name="multiplayer" type="Button" parent="MarginContainer/ScrollContainer/HSeparator"]
show_behind_parent = true
margin_top = 336.0
margin_right = 313.0
margin_bottom = 444.0
focus_neighbour_top = NodePath("../mini game")
focus_neighbour_bottom = NodePath("../quit Button")
focus_next = NodePath("../quit Button")
focus_previous = NodePath("../mini game")
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
shortcut_in_tooltip = false
text = "Multiplayer"
flat = true

[node name="Shop" type="Button" parent="MarginContainer/ScrollContainer/HSeparator"]
margin_top = 448.0
margin_right = 313.0
margin_bottom = 556.0
focus_next = NodePath("../music on & off")
focus_previous = NodePath("../chap 2 ")
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Anime"
flat = true

[node name="controls" type="Button" parent="MarginContainer/ScrollContainer/HSeparator"]
show_behind_parent = true
margin_top = 560.0
margin_right = 313.0
margin_bottom = 668.0
focus_neighbour_top = NodePath("../mini game")
focus_neighbour_bottom = NodePath("../quit Button")
focus_next = NodePath("../quit Button")
focus_previous = NodePath("../mini game")
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
shortcut_in_tooltip = false
text = "Controls"
flat = true

[node name="quit Button" type="Button" parent="MarginContainer/ScrollContainer/HSeparator"]
show_behind_parent = true
margin_top = 672.0
margin_right = 313.0
margin_bottom = 780.0
focus_neighbour_top = NodePath("../music on & off")
focus_next = NodePath("../chap 1 ")
focus_previous = NodePath("../music on & off")
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "quit"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HSeparator/comics" to="." method="_on_comics_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HSeparator/new game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HSeparator/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HSeparator/multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HSeparator/Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HSeparator/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HSeparator/quit Button" to="." method="_on_quit_Button_pressed"]
